added contacts file

--- a/prices.html
+++ b/prices.html
@@ -8,12 +8,11 @@
         <link rel="stylesheet" href="styles.css">
     </head> 
     <body style="background-color: powderblue;"> 
-        <header>
-            <img src="images/school-supplies-5541102_1280.jpg" alt="Logo" class="logo"> 
+        <header class="sticky">
+            <img src="images/logo.jpg" alt="Logo" class="logo"> 
             <h1 style="font-family: cursive; text-align: center;">BrightFuture English School</h1>
         </header> 
         <main> 
-            <img src="images/classroom.jpg" alt="Banner" class="banner">
             <h3 style="background-color: tomato; color: azure; text-align: center;">Our Tariff Plans</h3>
             
         <footer>
@@ -21,4 +20,6 @@
         </footer>
         
     </body>
-</html>
+</html> 
+
+
