--- a/contacts.html
+++ b/contacts.html
@@ -35,9 +35,11 @@
                                 <legend><b>Contact Us</b></legend>
                                 <label for="firstName">Name:</label>
                                 <input type="text" id="firstName" name="firstName" placeholder="Mark" required><br><br>
-                                <label for="email">Your email:</label>
-                                <input type="email" id="email" name="email" placeholder="test@gmail.com" required><br><br>
-                                <textarea name="message" rows="10" cols="30" placeholder=" Write your message here... " required></textarea><br><br>
+                                <label for="email">Your email:</label> 
+                                <div id="emailError" class="validateFormError"></div><br>
+                                <input type="email" id="email" onkeydown="validateEmail()" onkeyup="deleteEmailMessage()" name="email" placeholder="test@gmail.com" required><br><br>
+                                <div id="messageError" class="validateFormError"></div><br>
+                                <textarea id="message" name="message" onkeydown="validateMessage()" onkeyup="deleteErrorMessage()" rows="10" cols="30" placeholder=" Write your message here... " maxlength="10" required></textarea><br><br>
                                 <button id="send">Send</button>
                             </fieldset> 
                         </form>
@@ -52,6 +54,7 @@
             <p>&copy; 2024 BrightFuture School</p>
         </footer>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> 
     <script src="script.js"></script>
 </body>
 </html>
